fix alignement of the current item

--- a/server/templates/assets/template.css
+++ b/server/templates/assets/template.css
@@ -100,6 +100,7 @@ table {
     padding-left: 3px;
     padding-right: 3px;
     margin-top: 20px;
+    align-items: end;
   }
 
   .current-sample-item {
@@ -107,7 +108,6 @@ table {
     color: white;
     font-weight: bold;
     font-size: 7px;
-    margin-top: 1rem;
     padding: 2px;
   }
 
